# clangd-query

./: .gitignore  .npmignore  AGENT.md  CLAUDE.md  LICENSE  README.md  build-releases.sh  build.sh  build_and_run_cli.sh  compare.sh  format_go.sh  package-lock.json  package.json  run_test.sh  run_tests.sh  test-old.sh  test.sh  tsconfig.json
test/fixtures/sample-project/: .clang-format  CMakeLists.txt
test/fixtures/sample-project/include/components/: mesh_renderer.h  rigidbody.h
test/fixtures/sample-project/include/core/: component.h  engine.h  game_object.h  interfaces.h  transform.h
test/fixtures/sample-project/include/events/: event_system.h
test/fixtures/sample-project/include/game/: character.h  enemy.h  player.h
test/fixtures/sample-project/include/patterns/: factory.h
test/fixtures/sample-project/include/rendering/: camera.h
test/fixtures/sample-project/include/resources/: texture.h
test/fixtures/sample-project/include/systems/: input_system.h  physics_system.h  render_system.h
test/fixtures/sample-project/include/ui/: large_ui_manager.h
test/fixtures/sample-project/include/utils/: resource_manager.h
test/fixtures/sample-project/src/: main.cpp
test/fixtures/sample-project/src/components/: mesh_renderer.cpp  rigidbody.cpp
test/fixtures/sample-project/src/core/: engine.cpp  game_object.cpp
test/fixtures/sample-project/src/game/: character.cpp  enemy.cpp  player.cpp
test/fixtures/sample-project/src/patterns/: factory.cpp
test/fixtures/sample-project/src/rendering/: camera.cpp
test/fixtures/sample-project/src/resources/: texture.cpp
(+72 files in other folders)
